Fix SpriteSheet reading sprites incorrectly
Fixes
- GL sprite sheet now reads sprites in correct order

Changes
- Removed unnecessary parameters from SpriteSheet methods